--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class=" container">
         <header class="flex">
             <section class=" logo flex">
-                <img src="images/icons8-star-64.png" alt="" />
+                <img src="icons8-star-64.png" alt="" />
 
                 <h1><span>BlackJoyMatters</span></h1>
             </section>
@@ -37,7 +37,7 @@
             <section class="one">
                 <h1>Your mental health matters,
                     <br>take time and give yourself the grace you deserve
-                    <img src="images/icons8-crown-48.png" alt="">
+                    <img src="icons8-crown-48.png" alt="">
                 </h1>
 
                 <p>
@@ -51,7 +51,7 @@
                 <input type="button" class="input2" value="Check out how it works >>" />
             </section>
             <section class="two">
-                <img src="images/blackjoy.jpeg" height="400" width="400" alt="" />
+                <img src="blackjoy.jpeg" height="400" width="400" alt="" />
 
             </section>
         </section>
